Again Fixed Dark Mode Footer But Im Blind

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@
         footer {
             margin-top: 10px;
             font-size: 0.9rem;
+            color: ecf0f1;
         }
 
         .exit-button {
@@ -178,9 +179,6 @@
         body.dark-mode, body.dark-mode .controls button {
             background-color: #34495e;
             color: black;
-        }
-        .fter {
-        color: ecf0f1;
         }
         body.dark-mode .button-container {
             background: rgba(255, 255, 255, 0.1);
